# nexosim-protocols

./: Cargo.toml  README.md
.github/workflows/: ci.yml
byte-utils/: Cargo.toml  README.md
byte-utils/examples/: aa.rs  kiss.rs
byte-utils/src/: decode.rs  decoding.rs  lib.rs
can-port/: Cargo.toml  README.md
can-port/examples/: can-setup.sh  can.rs
can-port/src/: lib.rs
io-utils/: Cargo.toml  README.md
io-utils/examples/: udp.rs
io-utils/src/: lib.rs  port.rs
serial-port/: Cargo.toml  README.md
serial-port/examples/: serial.rs
serial-port/src/: lib.rs
