[workspace]
members = ["byte-utils", "io-utils", "serial-port"]
resolver = "3"

[workspace.dependencies]
bytes = "1.10"
mio = {version = "1", features = ["os-poll", "os-ext"] }
nexosim = { git = "https://github.com/asynchronics/nexosim.git", rev = "ba3fd65" }
nexosim-util = { git = "https://github.com/asynchronics/nexosim.git", rev = "ba3fd65" }
