[package]
name = "nexosim-can-port"
# When incrementing version and releasing to crates.io:
# - Update crate version in this Cargo.toml
# - Update crate version in README.md
# - Update dependency in sibling crates
# - Remove path dependencies
# - Update CHANGELOG.md
# - Update if necessary copyright notice in LICENSE-MIT
# - Create a "vX.Y.Z" git tag
authors = ["Asynchronics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/nexosim-protocols"
readme = "README.md"
homepage = "https://github.com/asynchronics/nexosim-protocols/can-port"
version = "0.1.0"
edition = "2024"
description="""
CAN port model for NeXosim-based simulations.
"""
categories = ["simulation", "aerospace", "science"]
keywords = [
    "simulation",
    "discrete-event",
    "systems",
    "cyberphysical",
    "real-time",
    "serial-port",
]

[features]
tracing = ["dep:tracing", "nexosim/tracing"]

[dependencies]
mio = { version = "1.0", features = ["os-poll", "os-ext"] }
nexosim = { workspace = true }
nexosim-io-utils = { path = "../io-utils" }
serde = "1"
schematic = { workspace = true }
socketcan = { version = "3.3" }
tracing = { version = "0.1.40", default-features = false, features = [
    "std",
], optional = true }

[dev-dependencies]
nexosim-util = { workspace = true }
schematic = { workspace = true, features = [ "toml" ] }
thread-guard = { workspace = true }
tracing-subscriber = "0.3"
