[package]
name = "nexosim-io-utils"
# When incrementing version and releasing to crates.io:
# - Update crate version in this Cargo.toml
# - Update dependency in sibling crates
# - Remove path dependencies
# - Update CHANGELOG.md
# - Update if necessary copyright notice in LICENSE-MIT
# - Create a "vX.Y.Z" git tag
version = "0.1.0"
edition = "2021"
description="""
I/O utilities for NeXosim-based simulations.
"""
categories = ["simulation", "aerospace", "science"]
keywords = [
    "simulation",
    "discrete-event",
    "systems",
    "cyberphysical",
    "real-time",
    "stream",
]

[dependencies]
mio = { workspace = true }
nexosim-util = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
mio = { workspace = true, features = ["net"] }
