[package]
name = "nexosim-io-utils"
# When incrementing version and releasing to crates.io:
# - Update crate version in this Cargo.toml
# - Update crate version in README.md
# - Update dependency in sibling crates
# - Remove path dependencies
# - Update CHANGELOG.md
# - Update if necessary copyright notice in LICENSE-MIT
# - Create a "vX.Y.Z" git tag
authors = ["Asynchronics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/nexosim-protocols"
readme = "README.md"
homepage = "https://github.com/asynchronics/nexosim-protocols/io-utils"
version = "0.1.0"
edition = "2024"
description="""
I/O utilities for NeXosim-based simulations.
"""
categories = ["simulation", "aerospace", "science"]
keywords = [
    "simulation",
    "discrete-event",
    "systems",
    "cyberphysical",
    "real-time",
    "stream",
]

[dependencies]
mio = { workspace = true }
thread-guard = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
mio = { workspace = true, features = ["net"] }
