[package]
name = "nexosim-serial-port"
# When incrementing version and releasing to crates.io:
# - Update crate version in this Cargo.toml
# - Update crate version in README.md
# - Update dependency in sibling crates
# - Remove path dependencies
# - Update CHANGELOG.md
# - Update if necessary copyright notice in LICENSE-MIT
# - Create a "vX.Y.Z" git tag
authors = ["Asynchronics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/nexosim-protocols"
readme = "README.md"
homepage = "https://github.com/asynchronics/nexosim-protocols/serial-port"
version = "0.1.0"
edition = "2024"
description="""
Serial port model for NeXosim-based simulations.
"""
categories = ["simulation", "aerospace", "science"]
keywords = [
    "simulation",
    "discrete-event",
    "systems",
    "cyberphysical",
    "real-time",
    "serial-port",
]

[features]
tracing = ["dep:tracing", "nexosim/tracing"]

[dependencies]
bytes = { workspace = true }
schematic = { workspace = true }
serde = "1"
mio = { workspace = true }
mio-serial = "5"
nexosim = { workspace = true }
nexosim-io-utils = { path = "../io-utils" }
tracing = { version = "0.1.40", default-features = false, features = [
    "std",
], optional = true }

[dev-dependencies]
nexosim-util = { workspace = true }
nexosim-byte-utils = { path = "../byte-utils" }
schematic = { workspace = true, features = [ "toml" ] }
serialport = {version = "4.7", default-features = false}
thread-guard = { workspace = true }
